# diagon-rs

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
diagon/: Cargo.toml  build.rs  grun
diagon-tool/: Cargo.toml
diagon-tool/src/: args.rs  main.rs
diagon-wasm/: Cargo.toml
diagon-wasm/src/: index.html  lib.rs
diagon/src/: lib.rs  screen.rs
diagon/src/translator/: frame.rs  math.rs  math_latex.rs  math_parse.rs  mod.rs  sequence.rs  sequence_graph.rs  table.rs  tree.rs
diagon/src/translator/antlr/: flowchart.g4  graph_planar.g4  math.g4  sequence.g4
diagon/src/translator/antlr/codegen/: flowchart.interp  flowchart.tokens  flowchartLexer.interp  flowchartlexer.rs  flowchartlistener.rs  flowchartparser.rs  graph_planar.interp  graph_planarLexer.interp  graph_planarLexer.tokens  graph_planarlexer.rs  graph_planarlistener.rs  graph_planarparser.rs  math.interp  mathLexer.interp  mathLexer.tokens  mathlexer.rs  mathlistener.rs  mathparser.rs  mod.rs  sequence.interp  sequenceLexer.interp  sequenceLexer.tokens  sequencelexer.rs  sequencelistener.rs  sequenceparser.rs  sequencevisitor.rs
src/: args.rs  main.rs  screen.rs
src/translator/: mod.rs  tree.rs
