[package]
name = "diagon-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2" }
diagon = { path = "../diagon" }


[package.metadata.wasm-pack.profile.release]
wasm-opt = false
