[package]
name = "diagon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
once_cell = { version = "1" }

[build-dependencies]
# antlr-rust = { version = "0.2" }

